--- a/readme
+++ b/readme
@@ -134,7 +134,7 @@ The linked list implementation with:
 -- 500 bindings consumed 0.005472 seconds.
 -- 5000 bindings consumed 1.083140 seconds.
 -- 50000 bindings consumed 109.452256 seconds.
--- 500000 bindings consumed Killed seconds.
+-- 500000 bindings consumed More than 5 minutes.
 
 The non-expanding hash table implementation with:
 -- 50 bindings consumed 0.000000 seconds.
